[package]
name = "pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2"
async-channel = "2"
async-lock = "3"
async-broadcast = "0.7"
async-oneshot = "0.5"
generational-arena = "0.2"
signal-child = "1"
log = "0.4"
futures-lite = "2"
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
pretty_env_logger = "0.5"
